--- a/src/main/resources/assets/sodium/lang/it_it.json
+++ b/src/main/resources/assets/sodium/lang/it_it.json
@@ -17,7 +17,7 @@
   "sodium.options.fps_limit.tooltip": "Limita il numero massimo di immagini al secondo. Questo può aiutare a ridurre l'utilizzo di energia e il sovraccarico del computer. Se il V-Sync è abilitato, quest'opzione verrà ignorata a meno che non sia minore della velocità di rinfresco del display.",
   "sodium.options.view_bobbing.tooltip": "Se abilitato, la visuale del giocatore oscillerà con i movimenti. I giocatori che soffrono la nausea possono trarre beneficio da disattivare quest'impostazione.",
   "sodium.options.attack_indicator.tooltip": "Controlla dove viene mostrato l'Indicatore d'Attacco.",
-  "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
+  "sodium.options.graphics_quality.tooltip": "La qualità della grafica controlla delle vecchie impostazioni ed è necessaria per la compatibilità della mod. Se le impostazioni sottostanti sono lasciate su \"Predefinito\", useranno quest'impostazione.",
   "sodium.options.clouds_quality.name": "Qualità delle nuvole",
   "sodium.options.clouds_quality.tooltip": "Controlla la qualità di calcolo delle nuvole nel cielo.",
   "sodium.options.weather_quality.name": "Qualità Atmosferica",
@@ -25,26 +25,26 @@
   "sodium.options.particle_quality.name": "Qualità delle particelle",
   "sodium.options.particle_quality.tooltip": "Controlla il numero massimo di particelle presenti sullo schermo.",
   "sodium.options.smooth_lighting.tooltip": "Controlla se i blocchi dovranno essere illuminati in modo liscio. Questo aumenta leggermente il tempo di caricamento dei chunk, ma non influenza il framerate.",
-  "sodium.options.biome_blend.tooltip": "Controls the range which biomes will be sampled for block colorization. Higher values greatly increase the amount of time it takes to build chunks for diminishing improvements in quality.",
-  "sodium.options.entity_distance.tooltip": "Controls how far away entities can render from the player. Higher values increase the render distance at the expense of frame rates.",
-  "sodium.options.entity_shadows.tooltip": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
-  "sodium.options.vignette.name": "Vignette",
-  "sodium.options.vignette.tooltip": "If enabled, a vignette effect will be rendered on the player's view. This is very unlikely to make a difference to frame rates unless you are fill-rate limited.",
-  "sodium.options.mipmap_levels.tooltip": "Controls the number of mipmaps which will be used for block model textures. Higher values provide better rendering of blocks in the distance, but may adversely affect performance with many animated textures.",
-  "sodium.options.use_block_face_culling.name": "Use Block Face Culling",
-  "sodium.options.use_block_face_culling.tooltip": "If enabled, only the sides of blocks which are facing the camera will be submitted for rendering. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU. Some resource packs may have issues with this option, so try disabling it if you're seeing holes in blocks.",
-  "sodium.options.use_fog_occlusion.name": "Use Fog Occlusion",
-  "sodium.options.use_fog_occlusion.tooltip": "If enabled, chunks which are determined to be fully hidden by fog effects will not be rendered, helping to improve performance. The improvement can be more dramatic when fog effects are heavier (such as while underwater), but it may cause undesirable visual artifacts between the sky and fog in some scenarios.",
-  "sodium.options.use_entity_culling.name": "Use Entity Culling",
-  "sodium.options.use_entity_culling.tooltip": "If enabled, entities determined not to be in any visible chunks will be skipped during rendering. This can help improve performance by avoiding the rendering of entities located underground or behind walls.",
-  "sodium.options.use_particle_culling.name": "Use Particle Culling",
-  "sodium.options.use_particle_culling.tooltip": "If enabled, only particles which are determined to be visible will be rendered. This can provide a significant improvement to frame rates when many particles are nearby.",
-  "sodium.options.animate_only_visible_textures.name": "Animate Only Visible Textures",
-  "sodium.options.animate_only_visible_textures.tooltip": "If enabled, only animated textures determined to be visible will be updated. This can provide a significant boost to frame rates on some hardware, especially with heavier resource packs. If you experience issues with some textures not being animated, try disabling this option.",
-  "sodium.options.allow_direct_memory_access.name": "Allow Direct Memory Access",
-  "sodium.options.allow_direct_memory_access.tooltip": "If enabled, some critical code paths will be allowed to use direct memory access for performance. This often greatly reduces CPU overhead for chunk and entity rendering, but can make it harder to diagnose some bugs and crashes. You should only disable this if you've been asked to or otherwise know what you're doing.",
+  "sodium.options.biome_blend.tooltip": "Controlla il raggio entro cui i biomi verranno contati per la colorizzazione dei blocchi. Valori maggiori aumentano fortemente il tempo impiegato per caricare i chunk.",
+  "sodium.options.entity_distance.tooltip": "Controlla quanto lontano verranno mostrate le entità. Valori alti possono ridurre il framerate.",
+  "sodium.options.entity_shadows.tooltip": "Se abilitato, semplici ombre verranno mostrate sotto le entità.",
+  "sodium.options.vignette.name": "Vignettatura",
+  "sodium.options.vignette.tooltip": "Se abilitato, un'effetto vignette verrà mostrato nella visuale del giocatore. Influisce minimamente sulle prestazioni.",
+  "sodium.options.mipmap_levels.tooltip": "Controlla il numero di mipmaps utilizzate per le textures dei blocchi. Valori alti migliorano la qualità dei blocchi più lontani, ma potrebbero influenzare negativamente le prestazioni con tante textures animate.",
+  "sodium.options.use_block_face_culling.name": "Usa Culling delle facce dei blocchi",
+  "sodium.options.use_block_face_culling.tooltip": "Se abilitato, solo i lati dei blocchi che sono rivolti verso la fotocamera verranno renderizzati. Questo può ridurre di molto il numero di facce nel processo di render, salvando larghezza banda di memoria e tempo della scheda video. Alcuni pacchetti di risorse potrebbero incontrare problemi con quest'opzione, quindi prova a disabilitare quest'opzione se vedi buchi nei blocchi.",
+  "sodium.options.use_fog_occlusion.name": "Usa Occlusione Nebbia",
+  "sodium.options.use_fog_occlusion.tooltip": "Se abilitato, i chunks completamente nascosti dalla nebbia non verranno renderizzati, miglirando le prestazioni. Il miglioramento potrebbe essere molto visibile quando la nebbia è fitta (ad esempio sott'acqua), ma potrebbe causare glitch indesiderati tra il cielo e la nebbia in rari scenari.",
+  "sodium.options.use_entity_culling.name": "Usa Culling Entità",
+  "sodium.options.use_entity_culling.tooltip": "Se abilitato, le entità in chunk invisibili verranno saltate nel processo di render. Questo può aumentare le prestazioni evitando il render di entità sottoterra o dietro ai muri.",
+  "sodium.options.use_particle_culling.name": "Usa Culling Particelle.",
+  "sodium.options.use_particle_culling.tooltip": "Se abilitato, solo le particelle visibili verranno renderizzate.Questo può migliorare significativamente gli FPS quando ci sono molte particelle vicino.",
+  "sodium.options.animate_only_visible_textures.name": "Anima solo textures visibili",
+  "sodium.options.animate_only_visible_textures.tooltip": "Se abilitato, solo le textures visibili verranno animate. Questo può miglirare significativamente gli FPS su certi PC, specialmente con texture packs pesanti. Se hai problemi riguardanti textures che non vengono animate, prova a disabilitare quest'impostazione.",
+  "sodium.options.allow_direct_memory_access.name": "Permetti Accesso alla Memoria Diretto",
+  "sodium.options.allow_direct_memory_access.tooltip": "Se abilitato, alcuni percorsi di codice critici useranno accesso diretto alla memoria per prestazioni migliori. Questo riduce l'utilizzo di processore, ma può rendere più difficile diagnosticare certi bug e crash. Disabilita questo solo se sai cosa stai facendo.",
   "sodium.options.enable_memory_tracing.name": "Abilita Memory Tracing",
-  "sodium.options.enable_memory_tracing.tooltip": "Debugging feature. If enabled, stack traces will be collected alongside memory allocations to help improve diagnostic information when memory leaks are detected.",
+  "sodium.options.enable_memory_tracing.tooltip": "Impostazione di debug. Se abilitato, verranno salvati stack traces delle allocazioni di memoria per aiutare la diagnostica quando memory leaks sono rilevati.",
   "sodium.options.performance_impact_string": "Impatto sulle prestazioni: %s",
   "sodium.options.buttons.undo": "Cancella",
   "sodium.options.buttons.apply": "Applica",
