Add Chunk Builder Mode and Simulation Distance options, fix autosave indicator translation

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -8,6 +8,8 @@
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.advanced": "Advanced",
   "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
+  "sodium.options.simulation_distance.tooltip": "The simulation distance controls how far away terrain and entities will be ticked. Lower values mean that less terrain and entities will be ticked, improving frame rates.",
+  "sodium.options.chunk_builder_mode.tooltip": "This option changes how chunk options are prioritized.\nThreaded: Nearby chunks are compiled in parallel threads. This may result in brief visual holes when blocks are destroyed.\nSemi Blocking: Some actions within a chunk will recompile the chunk immediately. This includes block placing & destroying.\nFully Blocking: Nearby chunks are always compiled immediately. This may impact game performance when blocks are placed or destroyed.",
   "sodium.options.brightness.tooltip": "Controls the brightness (gamma) of the game.",
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
   "sodium.options.fullscreen.tooltip": "If enabled, the game will display in full-screen (if supported).",
@@ -29,7 +31,7 @@
   "sodium.options.entity_shadows.tooltip": "If enabled, basic shadows will be rendered beneath mobs and other entities.",
   "sodium.options.vignette.name": "Vignette",
   "sodium.options.vignette.tooltip": "If enabled, a vignette effect will be rendered on the player's view. This is very unlikely to make a difference to frame rates unless you are fill-rate limited.",
-  "sodium.options.autosaveIndicator.tooltip": "If enabled, shows an \"Saving world\" indicator on the bottom right of your screen when auto-saving.",
+  "sodium.options.autosave_indicator.tooltip": "If enabled, shows an \"Saving world\" indicator on the bottom right of your screen when auto-saving.",
   "sodium.options.mipmap_levels.tooltip": "Controls the number of mipmaps which will be used for block model textures. Higher values provide better rendering of blocks in the distance, but may adversely affect performance with many animated textures.",
   "sodium.options.use_block_face_culling.name": "Use Block Face Culling",
   "sodium.options.use_block_face_culling.tooltip": "If enabled, only the sides of blocks which are facing the camera will be submitted for rendering. This can eliminate a large number of block faces very early in the rendering process, saving memory bandwidth and time on the GPU. Some resource packs may have issues with this option, so try disabling it if you're seeing holes in blocks.",
