--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -6,6 +6,7 @@
   "sodium.option_impact.varies": "Varies",
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.advanced": "Advanced",
+  "sodium.options.pages.vanilla": "Vanilla",
   "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
   "sodium.options.brightness.tooltip": "Controls the brightness (gamma) of the game.",
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
