fix: add missing "Close" translation string

--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -55,5 +55,6 @@
   "sodium.options.chunk_memory_allocator.swap": "Swap",
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
+  "sodium.options.buttons.close": "Close",
   "sodium.options.buttons.donate": "Buy us a coffee!"
 }
