--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -7,7 +7,8 @@
   "sodium.options.pages.quality": "Quality",
   "sodium.options.pages.performance": "Performance",
   "sodium.options.pages.advanced": "Advanced",
-  "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Lower distances mean that less terrain will be rendered, improving frame rates.",
+  "sodium.options.view_distance.tooltip": "The render distance controls how far away terrain will be rendered. Shorter distances mean that less terrain will be rendered, improving frame rates.",
+  "sodium.options.simulation_distance.tooltip": "The simulation distance controls how far away terrain and entities will be loaded and ticked. Shorter distances can reduce the internal server's load and may improve frame rates.",
   "sodium.options.brightness.tooltip": "Controls the brightness (gamma) of the game.",
   "sodium.options.gui_scale.tooltip": "Sets the maximum scale factor to be used for the user interface. If 'auto' is used, then the largest scale factor will always be used.",
   "sodium.options.fullscreen.tooltip": "If enabled, the game will display in full-screen (if supported).",
@@ -15,6 +16,7 @@
   "sodium.options.fps_limit.tooltip": "Limits the maximum number of frames per second. This can help reduce battery usage and general system load when multi-tasking. If V-Sync is enabled, this option will be ignored unless it is lower than your display's refresh rate.",
   "sodium.options.view_bobbing.tooltip": "If enabled, the player's view will sway and bob when moving around. Players who experience motion sickness while playing can benefit from disabling this.",
   "sodium.options.attack_indicator.tooltip": "Controls where the Attack Indicator is displayed on screen.",
+  "sodium.options.autosave_indicator.tooltip": "If enabled, an indicator will be shown when the game is saving the world to disk.",
   "sodium.options.graphics_quality.tooltip": "The default graphics quality controls some legacy options and is necessary for mod compatibility. If the options below are left to \"Default\", they will use this setting.",
   "sodium.options.clouds_quality.tooltip": "Controls the quality of rendered clouds in the sky.",
   "sodium.options.weather_quality.tooltip": "Controls the quality of rain and snow effects.",
