Fix Typos on Turkish Language

--- a/src/main/resources/assets/sodium/lang/tr_tr.json
+++ b/src/main/resources/assets/sodium/lang/tr_tr.json
@@ -53,12 +53,12 @@
   "sodium.options.use_persistent_mapping.name": "Kararlı Mapping Kullan",
   "sodium.options.use_persistent_mapping.tooltip": "Eğer Aktifse, hafızanın küçük bir kısmı Chunk oluşturması için korunacak, Chunk'lar yüklenir veya oluşurken işleci yükünü ve kare dengesizliğini azaltır.\n\nOpenGL 4.4 yada ABF Buffer Storage gerekir.",
   "sodium.options.chunk_memory_allocator.name": "Chunk Hafıza Ayırıcı",
-  "sodium.options.chunk_memory_allocator.tooltip": "Chunk görüntülemesi için kullanılacak chunk ayırıcı seçimi.\n- ASYNC: En Hızlı Seçim, Çoğu Grafik Kartı ile iyi calışır.\n- SWAP: Eski Grafik Kartları için geriçözüm. Hafıza kullanımını yükseltebilir.",
+  "sodium.options.chunk_memory_allocator.tooltip": "Chunk görüntülemesi için kullanılacak chunk ayırıcı seçimi.\n- ASYNC: En hızlı seçim, çoğu Grafik Kartı ile iyi calışır.\n- SWAP: Eski Grafik Kartları için bir çözüm. Hafıza kullanımını yükseltebilir.",
   "sodium.options.chunk_memory_allocator.async": "Async",
   "sodium.options.chunk_memory_allocator.swap": "Swap",
-  "sodium.options.chunk_update_threads.name": "Chunk Güncelleme İşlemcileri",
+  "sodium.options.chunk_update_threads.name": "Chunk Güncelleme Çekirdekleri",
   "sodium.options.chunk_update_threads.tooltip": "Chunk oluşturma için kullanılacak Mİ(Mantıksal İşlemci) sayısı. Fazla Mİ sayısı chunk oluşturma ve güncelleme hızını artırabilir, ama kare zamanını negatif olarak etkileyebilir.",
-  "sodium.options.always_defer_chunk_updates.name": "Chunk Güncelleme Erteleyici",
+  "sodium.options.always_defer_chunk_updates.name": "Chunk Güncelleme Erteleme",
   "sodium.options.always_defer_chunk_updates.tooltip": "Eğer Aktifse, gerekli olsalar bile chunk güncellemelerini beklemez. Bazı durumlarda fps'i artırabilir, ama dünyada görüntesel lag oluşturabilir.",
   "sodium.options.buttons.undo": "Geri Al",
   "sodium.options.buttons.apply": "Uygula",
