--- a/src/main/resources/assets/sodium/lang/tr_tr.json
+++ b/src/main/resources/assets/sodium/lang/tr_tr.json
@@ -2,14 +2,14 @@
   "sodium.option_impact.low": "Düşük",
   "sodium.option_impact.medium": "Orta",
   "sodium.option_impact.high": "Yüksek",
-  "sodium.option_impact.extreme": "Çok Yüksek",
+  "sodium.option_impact.extreme": "Aşırı Yüksek",
   "sodium.option_impact.varies": "Değişken",
   "sodium.options.pages.quality": "Kalite",
   "sodium.options.pages.performance": "Performans",
   "sodium.options.pages.advanced": "Gelişmiş",
   "sodium.options.view_distance.tooltip": "Yükleme uzaklığı yeryüzünün ne kadar uzak yüklenceğini ayarlar. Daha az değerler daha az yerin yüklenceğini belirtir, fps yükselir.",
-  "sodium.options.simulation_distance.tooltip": "Simulasyon uzaklığı varlıkların ne kadar uzaktan yükleneceğini ve tickleyeceğini belirtir. Daha az değerler iç sunucunun yükünü azaltır ve fps artırır.",
-  "sodium.options.brightness.tooltip": "Oyunun parlaklığını(gammasını) belirler.",
+  "sodium.options.simulation_distance.tooltip": "Simulasyon uzaklığı varlıkların ne kadar uzaktan yükleneceğini ve işleyeceğini belirtir. Daha az değerler iç sunucunun yükünü azaltır ve fps artırır.",
+  "sodium.options.brightness.tooltip": "Oyunun parlaklığını (gammasını) belirler.",
   "sodium.options.gui_scale.tooltip": "Oyuncu arayüzünün büyüklüğünü belirler. Eğer 'Otomatik' ayarlandı ise yapılabilen en büyük değer kullanılır.",
   "sodium.options.fullscreen.tooltip": "Eğer aktifse, oyun tam ekrana geçer. (Destekleniyor ise)",
   "sodium.options.v_sync.tooltip": "Eğer aktifse, oyun fps'i monitör yenilenme hızına sabitlenir, ve biraz yavaş giriş hızı ücretinde daha yumuşak ve sabit bir görünüm elde edilir. Bu ayar eğer sistem çok yavaş ise performansı etkileyebilir.",
@@ -43,7 +43,7 @@
   "sodium.options.animate_only_visible_textures.name": "Sadece Görünen Dokuları Oynat",
   "sodium.options.animate_only_visible_textures.tooltip": "Eğer Aktifse, sadece görünen animasyonlu dokular güncellenebilir. Bazı sistemler üzerinde büyük performans artırabilir, özellikle ağır kaynak paketlerinde. Eğer bazı dokuların animasyonu çalışmıyorsa bu seçeneği devredışı bırakın.",
   "sodium.options.cpu_render_ahead_limit.name": "İşlemci ÖnYükleme Limiti",
-  "sodium.options.cpu_render_ahead_limit.tooltip": "İşlemcinin, Grafik Kartı kareyi tamamlamadan önce oluşturacağı kare sayısı. Çok düşük veya çok fazla oranlar kare dengesizliği oluşturabilir.",
+  "sodium.options.cpu_render_ahead_limit.tooltip": "İşlemcinin, Grafik Kartı kareyi oluşturmayı tamamlamadan önce oluşturacağı kare sayısı. Çok düşük veya çok fazla oranlar kare dengesizliği oluşturabilir.",
   "sodium.options.cpu_render_ahead_limit.value": "%s kare(ler)",
   "sodium.options.allow_direct_memory_access.name": "Tam Hafıza Erişimine İzin Ver",
   "sodium.options.allow_direct_memory_access.tooltip": "Eğer Aktifse, bazı kritik kod yolları erişim için açılır. Bu genellikle İşlemci yükünü Chunk oluştururken azaltır, ama bazı bug ve çöküşleri anlamayı zorlaştırabilir. Bunu sade kapatmanız gerektiğinde yada ne yaptığınızı biliyorsanız kapatın.",
