--- a/src/main/resources/assets/sodium/lang/ru_ru.json
+++ b/src/main/resources/assets/sodium/lang/ru_ru.json
@@ -29,8 +29,8 @@
   "sodium.options.biome_blend.tooltip": "Управляет диапазоном биомов, которые будут выбраны для раскрашивания блоков. Высокие значения значительно увеличивают время, необходимое для создания чанков, что снижает улучшение качества.",
   "sodium.options.entity_distance.tooltip": "Определяет, как далеко могут отображаться сущности. Высокие значения увеличивают расстояние видимости за счёт частоты кадров.",
   "sodium.options.entity_shadows.tooltip": "Если включено, будут отображаться тени под мобами и другими сущностями.",
-  "sodium.options.vignette.name": "Виньетка",
-  "sodium.options.vignette.tooltip": "Если включено, в поле зрения игрока будет отображаться эффект виньетки. Маловероятно, что это повлияет на частоту кадров, если вы не ограничены скоростью заполнения.",
+  "sodium.options.vignette.name": "Виньетирование",
+  "sodium.options.vignette.tooltip": "Если включено, в поле зрения игрока будет отображаться эффект виньетирования. Маловероятно, что это повлияет на частоту кадров, если вы не ограничены скоростью заполнения.",
   "sodium.options.mipmap_levels.tooltip": "Управляет кол-вом MIP-карт, которые будут использоваться для текстур модели блока. Высокие значения обеспечивают лучшее отображение блоков на расстоянии, но могут отрицательно сказаться на производительности со многими анимированными текстурами.",
   "sodium.options.use_block_face_culling.name": "Использовать отбор сторон блока",
   "sodium.options.use_block_face_culling.tooltip": "Если включено, для отображения будут представлены только стороны блоков, обращённые к камере. Это может исключить большое кол-во сторон блоков на самом раннем этапе рендеринга, экономя пропускную способность памяти и время на ГП. Некоторые ресурспаки могут иметь проблемы с этой опцией, поэтому попробуйте отключить её, если вы видите дыры в блоках.",
@@ -50,7 +50,7 @@
   "sodium.options.enable_memory_tracing.name": "Включить трассировку памяти",
   "sodium.options.enable_memory_tracing.tooltip": "Функция отладки. Если включено, трассировка стека будет собираться вместе с выделением памяти, чтобы улучшить диагностическую информацию при обнаружении утечек памяти.",
   "sodium.options.performance_impact_string": "Влияние на производительность: %s",
-  "sodium.options.use_persistent_mapping.name": "Использовать Persistent Mapping",
+  "sodium.options.use_persistent_mapping.name": "Использовать постоянный буфер",
   "sodium.options.use_persistent_mapping.tooltip": "Если включено, небольшой объем памяти будет постоянно отображаться для ускорения обновления чанков и рендеринга сущностей.\n\nТребуется OpenGL 4.4 или ARB_buffer_storage.",
   "sodium.options.chunk_memory_allocator.name": "Распред. фрагментов памяти",
   "sodium.options.chunk_memory_allocator.tooltip": "Выбирает распределитель памяти, который будет использоваться для отображения чанков.\n- ASYNC: Самый быстрый вариант, хорошо работает с большинством современных графических драйверов.\n- SWAP: Резервный вариант для старых графических драйверов. Может значительно увеличить использование памяти.",
