--- a/src/main/resources/assets/sodium/lang/ru_ru.json
+++ b/src/main/resources/assets/sodium/lang/ru_ru.json
@@ -46,7 +46,7 @@
   "sodium.options.cpu_render_ahead_limit.tooltip": "Задаёт максимальное количество кадров, которые ЦП может подготавливать для рендеринга на ГП. Очень низкие или высокие значения могут дестабилизировать частоту кадров.",
   "sodium.options.cpu_render_ahead_limit.value": "%s кадр(ов)",
   "sodium.options.allow_direct_memory_access.name": "Разрешить прямой доступ к памяти",
-  "sodium.options.allow_direct_memory_access.tooltip": "Если включено, некоторые критические пути кода получат разрешение использовать прямой доступ к памяти ради производительности. Зачастую это сильно снижает перегрузку ЦП при рендеринге чанков и сущностей, но может усложнить диагностику некоторых ошибок и вылетов. Отключать это стоит только если вы следуете инструкциям или точно знаете, что делаете.",
+  "sodium.options.allow_direct_memory_access.tooltip": "Если включено, некоторым критическим путям кода будет разрешено использовать прямой доступ к памяти для повышения производительности. Зачастую это сильно снижает перегрузку ЦП при рендеринге чанков и сущностей, но может усложнить диагностику некоторых ошибок и вылетов. Отключать это стоит только если вы следуете инструкциям или точно знаете, что делаете.",
   "sodium.options.enable_memory_tracing.name": "Включить трассировку памяти",
   "sodium.options.enable_memory_tracing.tooltip": "Функция отладки. Если включено, трассировка стека будет собираться вместе с распределением памяти, чтобы помочь улучшить диагностическую информацию при обнаружении утечек памяти.",
   "sodium.options.performance_impact_string": "Влияние на производительность: %s",
