--- a/src/main/resources/assets/sodium/lang/ru_ru.json
+++ b/src/main/resources/assets/sodium/lang/ru_ru.json
@@ -12,7 +12,7 @@
   "sodium.options.brightness.tooltip": "Управляет яркостью (гаммой) игры.",
   "sodium.options.gui_scale.tooltip": "Устанавливает коэффициент масштабирования для интерфейса. При выборе \"авто\" всегда будет использоваться наибольший размер.",
   "sodium.options.fullscreen.tooltip": "Если включено, игра будет открыта во весь экран (если доступно).",
-  "sodium.options.v_sync.tooltip": "Если включена, частота кадров будет синхронизирована с частотой обновления монитора, обеспечивая более плавную игру за счет небольшой задержки ввода. Возможно понижение производительности, если ваша система слишком медленна.",
+  "sodium.options.v_sync.tooltip": "Если включена, частота кадров будет синхронизирована с частотой обновления монитора, обеспечивая более плавную игру за счет небольшой задержки ввода. Может понизить производительность слабых систем.",
   "sodium.options.fps_limit.tooltip": "Ограничивает максимальное количество кадров в секунду. Это поможет уменьшить расход заряда батареи и нагрузку на систему в обеспечении многозадачности. При включённой вертикальной синхронизации этот параметр будет игнорироваться, если он выше частоты обновления вашего экрана.",
   "sodium.options.view_bobbing.tooltip": "Если включено, обзор игрока будет покачиваться при движении. Отключение этого параметра может помочь людям, страдающим от укачивания во время игры.",
   "sodium.options.attack_indicator.tooltip": "Управляет расположением индикатора атаки на экране.",
