--- a/src/main/resources/assets/sodium/lang/en_us.json
+++ b/src/main/resources/assets/sodium/lang/en_us.json
@@ -59,7 +59,9 @@
   "sodium.options.chunk_update_threads.name": "Chunk Update Threads",
   "sodium.options.chunk_update_threads.tooltip": "Specifies the number of threads to use for chunk building. Using more threads can speed up chunk loading and update speed, but may negatively impact frame times.",
   "sodium.options.always_defer_chunk_updates.name": "Always Defer Chunk Updates",
-  "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag in the world.",
+  "sodium.options.always_defer_chunk_updates.tooltip": "If enabled, terrain rendering will never wait for chunk updates to finish, even if they are important. This can greatly improve frame rates in some scenarios, but it may create significant visual lag in the world.",
+  "sodium.options.use_compact_vertex_format.name": "Use Compact Vertex Format",
+  "sodium.options.use_compact_vertex_format.tooltip": "If enabled, block geometry will be stored in video memory using a more compact representation. This greatly reduces memory usage and bandwidth requirements, but may cause issues with some resource packs and graphics drivers.",
   "sodium.options.buttons.undo": "Undo",
   "sodium.options.buttons.apply": "Apply",
   "sodium.options.buttons.donate": "Buy us a coffee!"
